# Lay-Summary-RLHF

./: .gitignore  .pylintrc  README.md  feedback.md  pyproject.toml
.github/workflows/: lint.yml
data/: harvard_medical_dictionary.json
milestone1/: data_inspection.ipynb
milestone2/: baseline1-Abstract.py  baseline2-BioMistral7B.py
milestone_reports/milestone1/: data_inspection.ipynb  data_inspection.md  teamwork_contract.md
milestone_reports/milestone2/: baseline1-Abstract.py  baseline1_abstract.py  baseline2-BioMistral7B.py  baseline2_biomistral7b.py
milestone_reports/milestone3/samples/: PLOS_Abstract_Introduction.txt  PLOS_Abstract_Introduction_Material and Methods.txt  PLOS_Introduction.txt  PLOS_entire_paper.txt  eLife_Abstract_Introduction.txt  eLife_Abstract_Introduction_Material and Methods.txt  eLife_Introduction.txt  eLife_entire_paper.txt
milestone_reports/milestone4/: control_vector.ipynb  control_vector_explore.ipynb  control_vector_predict.ipynb
milestone_reports/milestone5/: Milestone6 Results.xlsx
milestone_reports/reflection_journal_week/: harvard_medical_dictionary.json
notebooks/: data_inspection.ipynb  results_exploration.ipynb
reflection_journal_week/: harvard_medical_dictionary.json  scrape_harvard_medical_dictionary.ipynb
scripts/: BioMistral_fewshot.py  baseline1_abstract.py  baseline2_biomistral7b.py  biomistral_fewshot.py  wizardlm2_bsm_sglang_abstract_article.py  wizardlm2_bsm_sglang_abstract_only.py
src/burrito/: baseline_model.py  evaluate.py
src/burrito/metrics_ppo/: dataloader.py  rewarder.py  train.py  utils.py
src/evaluation_script/: evaluate.py  evaluate1.py  evaluate2.py
