
[project]
name = "burrito"
version = "1.0.0"
description = ""
authors = [
    {name = "Robin Yuen Shing Hei", email = "robin.ysh@gmail.com"},
    {name = "Mingcong", email = ""},
    {name = "Qihan", email = ""},
    {name = "Mandeep", email = ""},
]
dependencies = [
    "icecream>=2.1.3",
    "tqdm>=4.66.2",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "autoflake>=2.2.0",
    "pylint>=2.17.5",
    "wandb>=0.16.4",
    "jsonlines>=4.0.0",
    "openai>=1.14.3",
    "mdformat>=0.7.17",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start.env_file=".env"
pdm-autoflake.shell = "git ls-files '*.py' | xargs -t pdm run autoflake --in-place --expand-star-imports --remove-all-unused-imports --ignore-init-module-imports"
pdm-isort.shell = "git ls-files '*.py' | xargs -t pdm run isort -q"
pdm-black.shell = "git ls-files '*.py' | xargs -t pdm run black -q"
lint-format-python.composite = ["pdm-autoflake", "pdm-isort", "pdm-black"]
lint-format-gitignore.shell = "git ls-files '.gitignore' | xargs -tI {} sort -o {} {}"
lint-format-yaml.shell = "git ls-files '*.yml' '*.yaml' | xargs -t yq -i -S -Y -w 10000 ."
lint-format-markdown.shell = "git ls-files '*.md' | xargs -t mdformat ."
lint-format.composite = ["lint-format-python", "lint-format-gitignore", "lint-format-yaml", "lint-format-markdown"]
pdm-flake8.shell = "git ls-files '*.py' | xargs -t pdm run flake8"
pdm-pylint.shell = "git ls-files '*.py' | xargs -t pdm run pylint"
lint-format.env = {LC_ALL="C"}
lint.composite = ["pdm-flake8", "pdm-pylint"]
start.shell = "pdm run python src/burrito/main.py"
evaluate.shell = "pdm run python src/evaluation_script/evaluate1.py"
