
[project]
name = "burrito"
version = "1.0.0"
description = ""
authors = [
    {name = "Robin Yuen Shing Hei", email = "robin.ysh@gmail.com"},
    {name = "Mingcong", email = ""},
    {name = "Qihan", email = ""},
    {name = "Mandeep", email = ""},
]
dependencies = [
    "icecream>=2.1.3",
    "tqdm>=4.66.2",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "autoflake>=2.2.0",
    "pylint>=2.17.5",
    "wandb>=0.16.4",
    "jsonlines>=4.0.0",
    "openai>=1.14.3",
    "mdformat>=0.7.17",
    "yq>=3.2.3",
    "lens-metric @ git+https://github.com/robinysh/LENS@master#subdirectory=lens",
    "alignscore @ git+https://github.com/harsh-dialpad/AlignScore.git@main",
    "textstat>=0.7.3",
    "numpy>=1.26.4",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "summac>=0.0.4",
    "transformers>=4.35.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "trl>=0.8.1",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start.env_file=".env"
pdm-autoflake.shell = "git ls-files '*.py' | xargs -t pdm run autoflake --in-place --expand-star-imports --remove-all-unused-imports --ignore-init-module-imports"
pdm-isort.shell = "git ls-files '*.py' | xargs -t pdm run isort -q"
pdm-black.shell = "git ls-files '*.py' | xargs -t pdm run black -q"
lint-format-python.composite = ["pdm-autoflake", "pdm-isort", "pdm-black"]
lint-format-gitignore.shell = "git ls-files '.gitignore' | xargs -tI {} sort -o {} {}"
lint-format-yaml.shell = "git ls-files '*.yml' '*.yaml' | xargs -t pdm run yq -i -S -Y -w 10000 ."
lint-format-markdown.shell = "git ls-files '*.md' | xargs -t mdformat ."
lint-format.composite = ["lint-format-python", "lint-format-gitignore", "lint-format-yaml", "lint-format-markdown"]
pdm-flake8.shell = "git ls-files '*.py' | xargs -t pdm run flake8"
pdm-pylint.shell = "git ls-files '*.py' | xargs -t pdm run pylint"
lint-format.env = {LC_ALL="C"}
lint.composite = ["pdm-flake8", "pdm-pylint"]
start.shell = "pdm run python src/burrito/main.py"
evaluate.shell = "pdm run python src/evaluation_script/evaluate1.py"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../summac#egg=summac",
]
